# notes-app

./: Dockerfile  Makefile  Readme.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
DjangoNotesApp/: asgi.py  settings.py  urls.py  wsgi.py
DjangoNotesApp/app/: apps.py  models.py  urls.py  views.py
DjangoNotesApp/app/migrations/: 0001_initial.py
DjangoNotesApp/app/tests/: base_test_setup.py  test_notes.py  test_user.py
templates/: base.html  edit.html  index.html
